# mailhook

./: .gitignore  README.md
mailhook-api/: pyproject.toml
mailhook-worker/: pyproject.toml
mailhook-worker/src/mailhook_worker/: server.py
mailhook-worker/src/mailhook_worker/config/: config.py
mailhook-worker/src/mailhook_worker/database/: db.py
mailhook-worker/src/mailhook_worker/models/: models.py
